--- a/website/index.html
+++ b/website/index.html
@@ -64,7 +64,9 @@
 
 								<article class="blog-post">
 									<footer class="controls">
-										<a href="#" class="button">Continue Reading</a>
+									<p align = "center">
+										<a href="first_problem.html" class="button">Next Stage</a>
+									</p>
 									</footer>
 								</article>
 
