--- a/website/second_problem.html
+++ b/website/second_problem.html
@@ -47,6 +47,17 @@
 							</section>
 
 						</div>
+						<div class="col-12">
+
+							<article class="blog-post">
+								<footer class="controls">
+								<p align = "center">
+									<a href="third_problem.html" class="button">Next Stage</a>
+								</p>
+								</footer>
+							</article>
+
+						</div>
 						
 					</div>
 				</div>
