--- a/website/first_problem.html
+++ b/website/first_problem.html
@@ -43,7 +43,8 @@
 									<h2>Gravity on Earth</h2>
 									<p>Get out of your seat right now. Try jumping around - maybe even have a competition with your friends over who can jump the highest! What do you notice is the same about all of your jumps? Perhaps you see that it’s unclear who’s winning - everybody’s jumping to similar heights! Or maybe just that you all fall back to the ground at about the same time?</p>
 									<p align = "center"><input placeholder = "Your guess"></input></p>
-									<p>As you’ve probably guessed, the reason that we fall back to Earth is because Earth’s gravity is pulling us down. But did you know that gravity isn’t unique to Earth? In fact, all of us also have our own gravity - we’re just so small (especially compared to the HUGE Earth) that it doesn’t really affect the world around us. So just like Earth’s gravity pulls us toward Earth, our gravity pulls the Earth toward us - it’s just that the Earth is so big that the gravitational interaction doesn’t make it move - only we move!</p>
+									<p>As you’ve probably guessed, the reason that we fall back to Earth is because Earth’s gravity is pulling us down. But did you know that gravity isn’t unique to Earth?</p>
+									<p>Gravity comes from an object’s <strong>mass (the amount of stuff in that object)</strong>. All of the Earth’s mass pulls on all of our mass, making us stay on the ground. In fact, all of our mass pulls on all of the Earth’s mass too - it’s just that the Earth is so big that this gravitational interaction doesn’t move the Earth. However, if we suddenly transformed into giants, we could (maybe) become big enough to attract the Earth towards us!</p>
 									<p>So what do you think would happen if we magically blew up a bouncy ball to the size of a planet and placed it into orbit around the sun?</p>
 									<p align = "center"><input placeholder = "Your guess"></input></p>
 									<p>Because the mass (the amount of stuff in an object) of everything on Earth is small compared to the mass of Earth itself, when we’re dealing with the movement of objects on our planet we can ignore the gravity of everything other than the Earth.</p>
@@ -52,7 +53,7 @@
 									<p align = "center"><input placeholder = "Your guess"></input></p>
 									<p>Now, let’s explore what actually happens.</p>
 									<p>First let’s think about the same two balls on a table. Just for fun, let’s attach the balls to a leash. If you pull both of them, the less massive one will go faster. Imagine this in your head - it’s much easier to make a lighter object move than a heavier one (think about pulling an elephant on a leash vs pulling a dog on a leash), so if you give them both the same exact pull, the smaller one goes faster. However, if you pull the heavier object more, it can move with the smaller one.</p>
-									<p>Remember that the amount of gravity something has depends on how heavy it is. This is why we feel the effects of Earth’s gravity but not of a pencil’s gravity -gravity changes depending on how heavy something is. Let’s think about this in terms of the falling balls. When you’re dropping a ball, gravity pulls a little more on the heavier ball then on the lighter ball. So just like how pulling the heavier ball harder on a table causes it to move at the same speed as the smaller one, having gravity pull more on the heavier ball causes it to fall at the same speed as the smaller one. Both balls hit the ground at the same time!</p>
+									<p>Remember that the amount of gravity something has depends on how heavy it is. This is why we feel the effects of Earth’s gravity but not of a pencil’s gravity - the pull of the Earth (a super heavy object) is much bigger than the pull of a pencil (a super light object)!. When you’re dropping a ball, gravity pulls a little more on the heavier ball then on the lighter ball. So just like how pulling the heavier ball harder on a table causes it to move at the same speed as the smaller one, having gravity pull more on the heavier ball causes it to fall at the same speed as the smaller one. <strong>Both balls hit the ground at the same time!</strong></p>
 									<p>Now you may notice that in your daily life dropping balls isn’t quite this simple. Try dropping a piece of paper and a ball at the same time - what happens?</p>
 									<p align = "center"><input placeholder = "Your guess"></input></p>
 									<p>The paper floats down slowly while the ball falls quickly. This isn't because the ball is heavier than the paper. It is because of air resistance! In space, there is no air so they would fall at the same time!</p>
@@ -152,9 +153,9 @@
 									</script>
 									</p>
 								</div>
-									<p>The balls pause every second in the animation. What do you notice about the distance the balls fall between each pause as time goes on? Are they falling faster as time goes on? Slower?</p>
+									<p>This animation is obviously slowed down compared to what happens in real life. However, this allows you to see what happens to the speed of each ball as it falls. Are the balls speeding up as time goes on? Are they slowing down? Write down your observations here:</p>
 									<p align = "center"><input placeholder = "Your guess"></input></p>
-									<p>If you said that each second the ball falls a greater distance, you’d be correct! This is because the ball speeds up as it falls - gravity keeps pulling on it so it just keeps moving faster. Imagine pedaling a bicycle wheel - the more work you do, the faster it spins. Gravity is doing the same thing to the ball as your pedaling is doing to the bicycle wheel!</p>
+									<p><em>If you said that each second the ball falls a greater distance, you’d be correct! This is because the ball speeds up as it falls - gravity keeps pulling on it so it just keeps moving faster. Imagine pedaling a bicycle wheel - the more work you do, the faster it spins. Gravity is doing the same thing to the ball as your pedaling is doing to the bicycle wheel!</em></p>
 								</section>
 
 							</div>
