--- a/website/index.html
+++ b/website/index.html
@@ -52,8 +52,8 @@
 
 								<section>
 									<h2>What is Gravity?</h2>
-									<p>When we jump up, we fall back down to the ground. When we throw something up in the air, it comes back down and (those of us with good hand-eye coordination) can catch it. But why does this happen? Why are objects attracted to the Earth? And if everything is somehow pulled back down toward the Earth, how can something (like a rocket) leave Earth? </p>
-									<p>Take some time to think about these questions and write down some of your ideas below. If you prefer to draw, feel free to sketch out our ideas on a separate page. (Don’t be scared about getting anything wrong! We’re going to take a while to explore all of these concepts in more detail. This is just so that at the end of today’s lesson you can compare how your thinking has changed! If you have no idea, feel free to just write that.)</p>
+									<p>When we jump up, we fall back down to the ground. When we throw something up in the air, it comes back down and (those of us with good hand-eye coordination) can catch it. But why does this happen? <strong>Why are objects attracted to the Earth? And if everything is somehow pulled back down toward the Earth, how can something (like a rocket) leave Earth? </strong></p>
+									<p>Take some time to think about these questions and write down some of your ideas below. If you prefer to draw, feel free to sketch out our ideas on a separate page. <i>(Don’t be scared about getting anything wrong! We’re going to take a while to explore all of these concepts in more detail. This is just so that at the end of today’s lesson you can compare how your thinking has changed! If you have no idea, feel free to just write that.)</i></p>
 									<p align = "center"><input placeholder ="Your Response"></input></p>
 									
 								</section>
