fixed another bug

--- a/website/third_problem.html
+++ b/website/third_problem.html
@@ -229,7 +229,7 @@
 									<div>
 											<div class="col-3 col-6-medium col-12-small">
 												<ul class="link-list">
-													<li><a href="github.com/akmobius/GravityWebsite">Explore our code!</a></li>
+													<li><a href="https://github.com/akmobius/GravityWebsite">Explore our code!</a></li>
 													<li><a href="https://docs.google.com/presentation/d/1v66o4QSOBBBSg30FW5lHExIMmH-7qpxEjDTDOKjSoVQ/edit?usp=sharing">Learn about the process of making this website!</a></li>
 													<li><a href="https://docs.google.com/document/d/1f51Ct1F28u2xdaaIkJ94PHW9krX6A_PtGw8prv6ldiQ/edit?usp=sharing">Share this document that gives an overview of the website!</a></li>
 												</ul>
