--- a/website/index.html
+++ b/website/index.html
@@ -1,9 +1,4 @@
 <!DOCTYPE HTML>
-<!--
-	Minimaxing by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
 	<head>
 		<title>G-lab</title>
@@ -83,14 +78,46 @@
 				</div>
 
 			<!-- Footer -->
-				<div id="footer-wrapper">
-					<div class="container">
-						<div class="row">
-							<div class="col-8 col-12-medium">
-							</div>
+			<div id="footer-wrapper">
+				<div class="container">
+					<div class="row">
+						<div class="col-4 col-12-medium">
+
+							<section>
+								<h2>Learn more:</h2>
+								<div>
+										<div class="col-3 col-6-medium col-12-small">
+											<ul class="link-list">
+												<li><a href="https://github.com/akmobius/GravityWebsite">Explore our code!</a></li>
+												<li><a href="https://docs.google.com/presentation/d/1v66o4QSOBBBSg30FW5lHExIMmH-7qpxEjDTDOKjSoVQ/edit?usp=sharing">Learn about the process of making this website!</a></li>
+												<li><a href="https://docs.google.com/document/d/1f51Ct1F28u2xdaaIkJ94PHW9krX6A_PtGw8prv6ldiQ/edit?usp=sharing">Share this document that gives an overview of the website!</a></li>
+											</ul>
+										</div>
+										
+								</div>
+							</section>
+
+						</div>
+						<div class="col-8 col-12-medium">
+
+							<section>
+								<h2>About the creators</h2>
+								<p>
+									Franck Belemkoabga (fnbelemk@mit.edu), Gyalpo Dongo-Aguirre (gyalpo@mit.edu), and Ariel Mobius (amobius@mit.edu) are MIT freshmen who are really passionate about astronomy, coding, and making the world a better place! We hope you enjoy this website. Please feel free to let us know if you have any ideas for improvement!
+								</p>
+								
+							</section>
+
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-12">
+
 						</div>
 					</div>
 				</div>
+			</div>
+
 
 		</div>
 
