added footnotes everywhere

--- a/website/third_problem.html
+++ b/website/third_problem.html
@@ -71,7 +71,7 @@
 									<p>Play around with the simulation below to see how changing the mass of the two bodies impacts the shape of their orbits. (Remember that changing the mass changes the gravity between the bodies, which is why the orbits change!) </p>
 									<p>
 										<ul>
-											<li> The ^ symbol in the simulation means the number of zeroes that number has. For example 6*10^24 (Earth's mass) is the number 6 with <bold>24 </bold> zeroes! The Earth is huge! (All mass is in kilograms.)</li>
+											<li> The ^ symbol in the simulation means the number of zeroes that number has. For example 6*10^24 (Earth's mass) is the number 6 with <bold>24 </bold> zeroes! The Earth is huge! (All mass is in kilograms and 10 seconds is equal to one Earth year.)</li>
 
 										</ul>
 									</p>
