minor edits to footnotes

--- a/website/third_problem.html
+++ b/website/third_problem.html
@@ -244,7 +244,7 @@
 								<section>
 									<h2>About the creators</h2>
 									<p>
-										Franck Belemkoabga (fnbelemk@mit.edu), Gyalpo Dongo-Aguirre (gyalpo@mit.edu), and Ariel Mobius (amobius@mit.edu) are MIT freshmen who are really passionate about astronomy, coding, and making the world a better place! We hope you enjoy this website. Please feel free to let us know if you have any ideas for improvement!
+										Ariel Mobius (amobius@mit.edu), Gyalpo Dongo-Aguirre (gyalpo@mit.edu), and Franck Belemkoabga (fnbelemk@mit.edu) are MIT freshmen who are really passionate about astronomy, coding, and making the world a better place! We hope you enjoy this website. Please feel free to let us know if you have any ideas for improvement!
 									</p>
 									
 								</section>
