--- a/website/first_problem.html
+++ b/website/first_problem.html
@@ -100,7 +100,7 @@
 									
 										
 									<p class="solid">First let’s think about the same two balls on a table. Just for fun, let’s attach the balls to a leash. If you pull both of them, the less massive one will go faster. Imagine this in your head - it’s much easier to make a lighter object move than a heavier one (think about pulling an elephant on a leash vs pulling a dog on a leash), so if you give them both the same exact pull, the smaller one goes faster. However, if you pull the heavier object more, it can move with the smaller one.</p>
-									<p class="solid">Remember that the amount of gravity something has depends on how heavy it is. This is why we feel the effects of Earth’s gravity but not of a pencil’s gravity - the pull of the Earth (a super heavy object) is much bigger than the pull of a pencil (a super light object)!. When you’re dropping a ball, gravity pulls a little more on the heavier ball then on the lighter ball. So just like how pulling the heavier ball harder on a table causes it to move at the same speed as the smaller one, having gravity pull more on the heavier ball causes it to fall at the same speed as the smaller one. <strong>Both balls hit the ground at the same time!</strong></p>
+									<p class="solid">Remember that the amount of gravity something has depends on how heavy it is. This is why we feel the effects of Earth’s gravity but not of a pencil’s gravity - the pull of the Earth (a super heavy object) is much bigger than the pull of a pencil (a super light object)! When you’re dropping a ball, gravity pulls a little more on the heavier ball then on the lighter ball. So just like how pulling the heavier ball harder on a table causes it to move at the same speed as the smaller one, having gravity pull more on the heavier ball causes it to fall at the same speed as the smaller one. <strong>Both balls hit the ground at the same time!</strong></p>
 									<p>
 										<hr><br>
 									</p>
@@ -128,7 +128,7 @@
 														<div class="mdc-slider__track--active_fill"></div>
 													  </div>
 													</div>
-													<div class="mdc-slider__thumb" role="slider" tabindex="0" aria-label="Discrete slider demo" aria-valuemin="0" aria-valuemax="100" aria-valuenow="50">
+													<div class="mdc-slider__thumb" role="slider" tabindex="0" aria-label="Discrete slider demo" aria-valuemin="10" aria-valuemax="100" aria-valuenow="50">
 													  <div class="mdc-slider__value-indicator-container">
 														<div class="mdc-slider__value-indicator">
 														  <span class="mdc-slider__value-indicator-text">
@@ -152,7 +152,7 @@
 														<div class="mdc-slider__track--active_fill"></div>
 													  </div>
 													</div>
-													<div class="mdc-slider__thumb" role="slider" tabindex="0" aria-label="Discrete slider demo" aria-valuemin="0" aria-valuemax="100" aria-valuenow="50">
+													<div class="mdc-slider__thumb" role="slider" tabindex="0" aria-label="Discrete slider demo" aria-valuemin="10" aria-valuemax="100" aria-valuenow="50">
 													  <div class="mdc-slider__value-indicator-container">
 														<div class="mdc-slider__value-indicator">
 														  <span class="mdc-slider__value-indicator-text">
