--- a/website/first_problem.html
+++ b/website/first_problem.html
@@ -6,8 +6,8 @@
 		<title>G-Lab 1st Problem</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css" rel="stylesheet">
-		<script src="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.js"></script>
+		<link href="https://cdnjs.cloudflare.com/ajax/libs/material-components-web/8.0.0/material-components-web.css" rel="stylesheet">
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/material-components-web/8.0.0/material-components-web.min.js"></script>
 		<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<style>
@@ -108,11 +108,6 @@
 									</body>
 									
 								<div>
-									<head>
-										<link href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css" rel="stylesheet">
-										<script src="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.js"></script>
-										<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-									</head>
 									<p class="mdc-typography">
 
 										<div class="mdc-layout-grid">
