--- a/website/index.html
+++ b/website/index.html
@@ -4,8 +4,8 @@
 		<title>G-lab</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css" rel="stylesheet">
-		<script src="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.js"></script>
+		<link href="https://cdnjs.cloudflare.com/ajax/libs/material-components-web/8.0.0/material-components-web.css" rel="stylesheet">
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/material-components-web/8.0.0/material-components-web.min.js"></script>
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
 	<body>
