--- a/website/third_problem.html
+++ b/website/third_problem.html
@@ -9,8 +9,8 @@
 		<title>G-Lab 3rd Problem</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css" rel="stylesheet">
-		<script src="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.js"></script>
+		<link href="https://cdnjs.cloudflare.com/ajax/libs/material-components-web/8.0.0/material-components-web.css" rel="stylesheet">
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/material-components-web/8.0.0/material-components-web.min.js"></script>
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
 	<body>
@@ -76,11 +76,6 @@
 										</ul>
 									</p>
 									<div>
-										<head>
-											<link href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css" rel="stylesheet">
-											<script src="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.js"></script>
-											<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-										</head>
 										<p class="mdc-typography">
 											<div class="mdc-layout-grid">
 												<div class="mdc-layout-grid__inner">
